장애물 추가

--- a/NGUIPractice/NGUIPractice.CSharp.csproj
+++ b/NGUIPractice/NGUIPractice.CSharp.csproj
@@ -186,6 +186,8 @@
     <Compile Include="Assets\NGUI\Scripts\UI\UIViewport.cs" />
     <Compile Include="Assets\PlayerContrl.cs" />
     <Compile Include="Assets\TopWallContrl.cs" />
+    <Compile Include="Assets\VelcroBody.cs" />
+    <Compile Include="Assets\VelcroContrl.cs" />
     <Compile Include="Assets\spawn.cs" />
   </ItemGroup>
   <ItemGroup>
